re-building agin an application in terminal

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- ✅ SEO Title -->
+    <title>Multimart  online Shop Smart & Diverse with Trusted Sellers</title>
+
+    <!-- ✅ SEO Meta Description -->
+    <meta
+      name="description"
+      content="Shop smart, shop diverse! Multimart connects you with top retailers and trusted sellers, offering a vast array of products at your fingertips. Enjoy seamless shopping and exceptional customer service."
+    />
+
+    <!-- ✅ Keywords for SEO -->
+    <meta
+      name="keywords"
+      content="Multimart, online shopping, trusted sellers, diverse products, ecommerce, buy online, Zimbabwe, shop smart"
+    />
+
+    <!-- ✅ Author -->
+    <meta name="author" content="Daniel Mututa" />
+
+    <!-- ✅ Open Graph (for link previews on social media) -->
+    <meta property="og:title" content="Multimart online Shop Smart & Diverse" />
+    <meta
+      property="og:description"
+      content="Shop smart, shop diverse! Discover top retailers and trusted sellers on Multimart — your hub for quality and variety."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-vercel-site.vercel.app/" />
+    <meta property="og:image" content="/vite.svg" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" href="/vite.svg" type="image/svg+xml" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
